--- a/JSdesafios/ex001/style.css
+++ b/JSdesafios/ex001/style.css
@@ -17,8 +17,17 @@ section {
     margin: auto;
     padding: 15px;
     margin-bottom: 10px;
-    border-radius: 5px;
+    border-radius: 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
+}
+
+div {
+    text-align: center;
+}
+
+section div#msg {
+    margin-bottom: 10px;
+    font-size: 19px;
 }
 
 section img#imagem {
