--- a/EXdeFora/ex009/style.css
+++ b/EXdeFora/ex009/style.css
@@ -10,6 +10,11 @@ body {
     background-color: rgb(206, 243, 255);
 }
 
+body, html {
+    width: 100vw;
+    height: 97vh;
+}
+
 header {
     margin: 20px 0px
 }
@@ -21,7 +26,8 @@ header > h1 {
 
 article {
     background-color: white;
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     margin: auto;
     padding: 20px;
     border-radius: 5px;
@@ -37,7 +43,8 @@ article label {
 article  input[type='number'] {
     margin: 5px 0px;
     height: 25px;
-    width: 200px;
+    max-width: 200px;
+    width: 100%;
     outline: none;
     border: 1px solid rgb(185, 185, 185);
     text-align: center;
